Removal of questions folder remnant in TRAISI project.  fix for swiping (modified to only occur on mobile navbar to allow scrolling on iOS devices and unwanted sidebar openings).

--- a/src/TRAISI/ClientApp/src/scss/_general.scss
+++ b/src/TRAISI/ClientApp/src/scss/_general.scss
@@ -20,6 +20,12 @@ body{
   overflow-x: hidden;
 }
 
+body.modal-open
+{
+	-webkit-overflow-scrolling: touch !important;
+ 
+}
+
 th{
   font-weight: $font-weight-semi-bold;
 }
